﻿- Add manual translation selection option
- Update translation framework to latest version with improved fallback language detection
- Allow for longer translation strings in dropdown menu widths


Version 2.2.1

- 2.2 UI speed bost function is now optional (trading off UI performance for game speed)
- Add external interface for other mods to determine whether or not this mod is managing a given prefab
- Tweak settings panel layout to accomodate longer translation strings
- Correct error in zh-tw PRR_UIC_OIL translation 


Version 2.2

- Add configurable XML translation framework (based on BloodyPenguin's translation framework)
- Add Traditional Chinese translation by M.S.Referee
- Mod now responds to in-game language changes
- Add active detection of prefabs that failed game init
- Workplace counts (totals or breakdowns) in settings panel now automatically update as valid values are entered
- Assign a minimum of one workplace to all workplace buildings if XML setting is zero or missing
- Settings category filter buttons now toggle on shift- or control-click
- Add mod compatibility check for Garbage Bin Controller mod
- Performance improvement: deactivate ploppable panel when not visible
- Performance improvement: destroy settings panel when not visible
- Standardise all logging


Version 2.1.2

- Add check to ensure that InitPrefab patch has applied and operated
- Add mod compatibility check for old Painter mod
- Streamlined notification messaging


Version 2.1.1

- Add mod options panel setting to toggle forced update of existing building stats on game load
- Add exception catcher for monuments panel setup (stop game hanging during load due to no valid monuments)


Version 2.1

- Add mod options panel setting for plain or skybox thumbnail backgrounds
- Add mod options panel setting for extra debugging logging and reduce default logging detail
- Add mod options panel button to regenerate building buttons