@@ -1,4 +1,5 @@
-﻿using System.Text;
+﻿using System;
+using System.Text;
 using UnityEngine;
 using ColossalFramework.UI;
 
@@ -35,6 +36,35 @@ namespace PloppableRICO
         internal static void Message(string message)
         {
             Debug.Log(PloppableRICOMod.ModName + ": " + message + ".");
+        }
+
+
+        /// <summary>
+        /// Prints an exception message to the Unity output log.
+        /// </summary>
+        /// <param name="message">Message to log</param>
+        internal static void LogException(Exception exception)
+        {
+            // Use StringBuilder for efficiency since we're doing a lot of manipulation here.
+            StringBuilder message = new StringBuilder();
+
+            message.AppendLine("caught exception!");
+            message.AppendLine("Exception:");
+            message.AppendLine(exception.Message);
+            message.AppendLine(exception.Source);
+            message.AppendLine(exception.StackTrace);
+
+            // Log inner exception as well, if there is one.
+            if (exception.InnerException != null)
+            {
+                message.AppendLine("Inner exception:");
+                message.AppendLine(exception.InnerException.Message);
+                message.AppendLine(exception.InnerException.Source);
+                message.AppendLine(exception.InnerException.StackTrace);
+            }
+
+            // Write to log.
+            Message(message.ToString());
         }
     }
 }
