@@ -38,7 +38,7 @@ namespace PloppableRICO
             }
             catch (Exception e)
             {
-                UnityEngine.Debug.LogException(e);
+                Debugging.LogException(e);
             }
         }
 
@@ -107,7 +107,7 @@ namespace PloppableRICO
             }
             catch (Exception e)
             {
-                UnityEngine.Debug.LogException(e);
+                Debugging.LogException(e);
             }
         }
 
